--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,17 @@ a {
   position: fixed;
   bottom: 20px;
   left: 20px;
-  max-width: 200px;
+  max-width: 220px;
+}
+
+.card {
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  margin: 1rem;
+  padding: 10px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .header {
@@ -55,3 +65,5 @@ a {
   width: 20px;
     display: inline-block;
 }
+
+
