--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ a {
   border-radius: 2px;
   display: inline-block;
   margin: 1rem;
-  padding: 10px;
+  padding: 15px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
@@ -46,6 +46,10 @@ a {
   /* height: 666vh;
   width: 1000vh; */
   background-color: #f7fafc;
+}
+
+.country-info-item {
+  padding: 2px 0px;
 }
 
 #country-name {
