--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
   position: fixed;
   bottom: 20px;
   left: 20px;
-  max-width: 220px;
+  width: 240px;
 }
 
 .card {
@@ -49,8 +49,14 @@ a {
 }
 
 .country-info-item {
-  padding: 2px 0px;
+  padding: 4px 0px;
   font-size: 1.1rem;
+  display: none;
+}
+
+#initial-card-text {
+  font-size: 1.6rem;
+  font-weight: bold;
 }
 
 #country-name {
@@ -61,7 +67,8 @@ a {
 #country-flag {
   width: 100%;
   position: relative;
-  opacity: 0.6;
+  opacity: 0.62s;
+  display: none;
 }
 
 .info-item-text {
@@ -69,9 +76,9 @@ a {
 }
 
 .icon {
-  display: inline-block;
   color: #333;
    vertical-align: top;
+
 }
 
 svg {
