--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ a {
   display: inline-block;
   margin: 1rem;
   padding: 15px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .header {
@@ -76,7 +76,7 @@ a {
 
 .icon {
   color: #333;
-   vertical-align: top;
+  vertical-align: top;
 }
 
 svg {
@@ -88,3 +88,20 @@ svg {
   margin: 10px auto 0;
   display: block;
 }
+
+/* #language {
+  display: block;
+}
+#currency {
+  display: block;
+}
+#region {
+  display: block;
+}
+#capital-name {
+  display: block;
+}
+
+#time-zone {
+  display: none;
+} */
