--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,14 @@ body {
 }
 
 a {
-  color: #333;
-  text-decoration: none;
+  background-color: #f7fafc;
+  color: black;
+  text-decoration: underline;
 }
 
 .country-info {
   position: fixed;
-  bottom: 20px;
+  bottom: 0px;
   left: 20px;
   width: 240px;
 }
@@ -32,13 +33,18 @@ a {
   display: inline-block;
   margin: 1rem;
   padding: 15px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-.header {
-  background-color: #444;
-  color: #f7fafc;
+.description {
+  background-color: #f7fafc;
+  color: black;
+  bottom: 23px;
+  position: absolute;
+  right: 25px;
+  height: 16px;
+  z-index: 100;
 }
 
 .map-styles {
@@ -56,7 +62,7 @@ a {
 
 #initial-card-text {
   font-size: 1.6rem;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 #country-name {
@@ -77,11 +83,9 @@ a {
 
 .icon {
   color: #333;
-   vertical-align: top;
-
+  vertical-align: top;
 }
 
 svg {
   display: inline-block;
 }
-
